Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejs-app
  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      containers:
        - name: nodejs-container
          image: asia-south1-docker.pkg.dev/confixa-rnd/confixa-docker-images/abc@sha256:ca610c941de6de009669db6c7c7c71f9842c4f2dceb8b48d9b0992a0be89b38d
          ports:
            - containerPort: 8080 
      imagePullSecrets:
        - name: secret-new
